feat: :construction: Nueva estructura del codigo con resgistro y crear contrañaa
Se creo la pagina para crear contraseña de forma exitosa, tambien se creo la pagina de crear cuenta quedo termianda

create.accounnt.html listo,  nuevo css llamado estio.css creados

--- a/styles.css
+++ b/styles.css
@@ -11,16 +11,6 @@ body {
     color: #333;
 }
 
-/* Estilos para el logo */
-.log-container {
-    margin-bottom: 20px;
-    text-align: center;
-}
-
-.logo {
-    max-width: 150px; /* Ajusta el tamaño según tu logo */
-    height: auto;
-}
 .login-container {
     background-color: white;
     border-radius: 10px;
@@ -107,4 +97,13 @@ h1 {
 
 .links a:hover {
     text-decoration: underline;
+}
+.logo-container {
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.logo {
+    max-width: 150px; /* Ajusta el tamaño según tu logo */
+    height: auto;
 }
